--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+html {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 62.5%;
+  box-sizing: inherit;
+}
+
 .App {
   text-align: center;
 }
