--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .4)), url('../assets/images/hero_image.gif');
+  background-image: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .4)), url('../images/hero_image.gif');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
